2003-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* README: Ruby/Libgda needs libgda 1.1.1 (development branch).

2003-11-29  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaerror.c: Gda::Error.new has been improved
	  to optionally accept parameters as description, number,
	  source, sqlstate.
	* src/rbgdaparameterlist.c: Added Gda::ParameterList#empty?
	* src/rbgdaprovider.c: Added Gda::Provider#== and
	  Gda::Provider#name (alias to #prov_id).
	* tests/*.rb: Cleaned test suite.

2003-11-28  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaparameterlist.c: Fixed a bug in
	  Gda::ParameterList (#parameters, #each_param).

2003-11-20  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaparameterlist.c: Fixed GC-related bug in
	  Gda::ParameterList#add (fix provided by Masao Mutoh).

2003-11-19  Laurent Sansonetti  <lrz@gnome.org>

	* README: libgda 1.0.2 or newer is needed.

2003-11-17  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgda.h, src/rbgdadatasource.c, src/rbgdaprovider.c:
	  Fixed bug (GDA_TYPE_DATASOURCE was used instead of
	  GDA_TYPE_DATA_SOURCE_INFO, same thing for PROVIDER).
	* src/rbgdaclient.c, src/rbgdacommand.c, src/rbgdaconnection.c,
	  src/rbgdaexport.c, src/rbgdatransaction.c:
	  Uses G_DEF_CONSTANTS().

2003-11-14  Laurent Sansonetti  <lrz@gnome.org>

	* Changed my e-mail address (laurent@datarescue.be -> lrz@gnome.org).

2003-11-05  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgda.h, src/rbgdacommand.c, src/rbgdafieldattributes.c,
	  src/rbgdaparameter.c, src/rbgdaparameterlist.c,
	  src/rbgdaquarklist.c, src/rbgdarow.c, src/rbgdavalue.c:
	  Removed all gboxed code, since all GDA classes we support
	  are now following GLib type system.

2003-10-27  Laurent Sansonetti  <lrz@gnome.org>

	* sample/print_config.rb: New file.
	* src/rbgdadatasource.c: Introduced Gda::DataSource.model.
	* src/rbgdaprovider.c: Introduced Gda::Provider.model.

2003-10-25  Laurent Sansonetti  <lrz@gnome.org>
